[package]
name = "rust-kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust-kernel"
test = false
bench = false

[dependencies]
# we need a bootloader to convert our binary to a bootable disk image
# we use the bootloader crate instead of making our own bootloader
bootloader = "0.9.8"
volatile = "0.2.6"
